[project]
name = "vigil"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["agents/*", "eval/"]

[tool.uv.sources]
vigil-common = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.15", "hatchling>=1.27", "pytest>=8.3", "pytest-asyncio>=0.25"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
