[project]
name = "vigil"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["agents/*", "eval/"]

[tool.uv.sources]
vigil-common = { workspace = true }
vigil-diagnosis = { workspace = true }
vigil-remediation = { workspace = true }
vigil-watchdog = { workspace = true }
vigil-orchestrator = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.15.15", "hatchling>=1.27", "pytest>=8.3", "pytest-asyncio>=1.4.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that exercise the full FastAPI + orchestration stack",
]
