[project]
name = "vigil-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
eval = "eval.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]
