[project]
name = "vigil-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["vigil-common", "vigil-diagnosis", "vigil-remediation", "vigil-watchdog", "fastapi>=0.115"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
